infrastructure/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peak-genie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peak-genie
      component: api
  template:
    metadata:
      labels:
        app: peak-genie
        component: api
    spec:
      containers:
        - name: api
          image: dsg05/peak-genie-image:v1
          ports:
            - containerPort: 8000
