infrastructure/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: dsg05/info_gpt
          command:
            - celery
            - "--app=info_gpt.api.tasks.celery_app"
            - "worker"
            - "--concurrency=2"
            - "--loglevel=info"
