infrastructure/peak-genie-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: peak-genie-service-lb
spec:
  type: LoadBalancer
  selector:
    app: peak-genie
    component: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
