infrastructure/peak-genie-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: peak-genie-service-np
spec:
  type: NodePort
  selector:
    app: peak-genie
    component: api
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8000
