infrastructure/peak-genie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peak-genie-service
spec:
  type: ClusterIP
  selector:
    app: peak-genie
    component: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
